# specto

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  publish.yml  test.yml
src/: args.rs  backoff.rs  logger.rs  main.rs  rotate.rs  signal.rs  util.rs  watched.rs
