[package]
name = "watchdog"
version = "0.1.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false

[features]
color = ["env_logger/atty", "env_logger/termcolor"]

[build-dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
grev = { version = "0.1.3", default-features = false }

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
clap = { version = "4.4", features = ["derive"] }
env_logger = { version = "0.7", default-features = false, features = ["humantime"] }
libc = { version = "0.2" }
log = { version = "0.4", default-features = false }
mio = { version = "1.0", default-features = false, features = ["os-poll", "os-ext"] }
