[package]
name = "specto"
version = "0.2.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/d-e-s-o/specto.git"
readme = "README.md"
description = """
A process watchdog with an optional output capturing rotated log file facility.
"""

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false

[build-dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
grev = { version = "0.1.3", default-features = false }

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
bufio = { version = "0.1" }
clap = { version = "4.4", features = ["derive"] }
jiff = { version = "0.2.3", default-features = false, features = ["std"] }
libc = { version = "0.2" }
log = { version = "0.4", default-features = false }
mio = { version = "1.0", default-features = false, features = ["os-poll", "os-ext"] }

[dev-dependencies]
tempfile = { version = "3.0" }
